--- a/blogApplication/src/main/resources/application.properties
+++ b/blogApplication/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.datasource.password=${DB_PASSWORD:root}
 #ORM s/w specific properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+server.port=8081
+spring.main.allow-circular-references=true
